@@ -69,6 +69,15 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
+
+					<!-- Configuration Sonar -->
+		<jacoco.version>0.8.5</jacoco.version>	
+		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+		<sonar.projectName>Eno-WS</sonar.projectName>
+        <sonar.language>java</sonar.language>
+		<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea -Dfile.encoding=UTF-8</argLine>
 	</properties>
 
 	<dependencies>
@@ -354,6 +363,39 @@
 							<autoReleaseAfterClose>true</autoReleaseAfterClose>
 						</configuration>
 					</plugin>
+										 <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.version}</version>
+                <executions>
+                    <!-- Prepare the property pointing to the JaCoCo runtime agent which is
+                         passed as VM argument when the Maven Surefire plugin is executed. -->
+                    <execution>
+                        <id>pre-unit-test</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                        <configuration>
+                            <!-- Set the name of the property containing the settings for JaCoCo
+                                 runtime agent. -->
+                            <propertyName>surefireArgLine</propertyName>
+                            <append>true</append>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>post-unit-test</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.7.0.1746</version>
+            </plugin>
 				</plugins>
 			</build>
 		</profile>
@@ -375,6 +417,12 @@
 		<developer>
 			<name>Laurent Caouissin</name>
 		</developer>
+		<developer>
+			<name>Ophélie Rogel</name>
+		</developer>
+		<developer>
+			<name>Athémane Dahmouh</name>
+		</developer>
 	</developers>
 
 	<contributors>
@@ -386,6 +434,12 @@
 		</contributor>
 		<contributor>
 			<name>Heïdi Koumarianos</name>
+		</contributor>
+		<contributor>
+			<name>Anne Husseini-Skalitz</name>
+		</contributor>
+		<contributor>
+			<name>Fabienne Perray-Gibert</name>
 		</contributor>
 	</contributors>
 
